--- a/secp256k1-sys/Cargo.toml
+++ b/secp256k1-sys/Cargo.toml
@@ -21,12 +21,16 @@ features = [ "recovery", "endomorphism", "lowmemory" ]
 [build-dependencies]
 cc = ">= 1.0.28, <= 1.0.41"
 
+[dependencies]
+c2rust_out = {path = "../c2rust_out", optional = true}
+
 [lib]
 name = "secp256k1_sys"
 path = "src/lib.rs"
 
 [features]
 default = ["std"]
+c2rust = ["c2rust_out", "external-symbols"]
 recovery = []
 endomorphism = []
 lowmemory = []
