--- a/c2rust_out/Cargo.toml
+++ b/c2rust_out/Cargo.toml
@@ -13,7 +13,7 @@ autobins = false
 [lib]
 name = "c2rust_out"
 path = "lib.rs"
-crate-type = ["staticlib", "rlib"]
+# crate-type = ["staticlib", "rlib"]
 
 
 [dependencies]
