--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: rust
-cache: 
+cache:
   directories:
   - cargo_web
 
@@ -19,6 +19,17 @@ matrix:
   exclude:
   - rust: 1.22.0
     os: windows
+  include:
+    - language: generic
+      name: Miri with c2rust
+      os: linux
+      script:
+        - curl --proto '=https' --tlsv1.2 https://build.travis-ci.org/files/rustup-init.sh -sSf | sh -s -- --default-toolchain none -y
+        - source $HOME/.cargo/env
+        - rustup toolchain install nightly --allow-downgrade -c miri
+        - cargo miri setup
+        - travis_wait 120 cargo miri test --features="c2rust rand serde recovery endomorphism"
+        - travis_wait 120 cargo miri test --features="c2rust rand serde recovery"
 
 script:
   - cargo build --verbose --no-default-features
@@ -42,12 +53,7 @@ script:
   - cargo run --example generate_keys --features=rand
   - if [ ${TRAVIS_RUST_VERSION} == "stable" ]; then cargo doc --verbose --features="rand,serde,recovery,endomorphism"; fi
   - if [ ${TRAVIS_RUST_VERSION} == "nightly" ]; then cargo test --verbose --benches --features=unstable; fi
-  - if [ ${TRAVIS_RUST_VERSION} == "nightly" -a "$TRAVIS_OS_NAME" = "linux" ]; then 
+  - if [ ${TRAVIS_RUST_VERSION} == "nightly" -a "$TRAVIS_OS_NAME" = "linux" ]; then
     cd no_std_test &&
     cargo run --release | grep -q "Verified Successfully";
-    fi
-  - if [ ${TRAVIS_RUST_VERSION} == "stable" -a "$TRAVIS_OS_NAME" = "linux" ]; then 
-    CARGO_TARGET_DIR=cargo_web cargo install --verbose --force cargo-web && 
-    cargo web build --verbose --target=asmjs-unknown-emscripten && 
-    cargo web test --verbose --target=asmjs-unknown-emscripten; 
     fi
